--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,8 +5,14 @@
     <!-- Base application theme -->
     <style name="Theme.CodeVocab" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your colors -->
-        <item name="colorPrimary">@android:color/holo_blue_dark</item>
-        <item name="colorSecondary">@android:color/holo_green_light</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorOnPrimary">@color/colorOnPrimary</item>
+        <item name="colorSurface">@color/colorSurface</item>
+        <item name="colorOnSurface">@color/colorOnSurface</item>
+        <item name="colorOnBackground">@color/colorBackground</item>
+
+
+<!--        <item name="android:fontFamily">@font/poppins</item>-->
         <!-- Nếu muốn toàn màn hình (Edge-to-Edge) -->
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/black</item>
