--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/homeFragment"
+        android:id="@+id/learningFragment"
         android:icon="@android:drawable/ic_menu_view"
-        android:title="Home" />
+        android:title="Learning" />
     <item
         android:id="@+id/dictionaryFragment"
         android:icon="@android:drawable/ic_menu_search"
