--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,11 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/learningFragment">
 
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.group20.codevocab.ui.home.HomeFragment"
+        android:id="@+id/learningFragment"
+        android:name="com.group20.codevocab.ui.module.ModuleListFragment"
         android:label="Home" />
 
     <fragment
