--- a/app/src/main/res/layout/item_module_detail.xml
+++ b/app/src/main/res/layout/item_module_detail.xml
@@ -48,7 +48,7 @@
             <Button
                 android:id="@+id/btnQuiz"
                 android:text="Quiz"
-                android:backgroundTint="@color/colorSecondary"
+                android:backgroundTint="@color/colorPrimary"
                 android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
