--- a/app/src/main/res/layout/item_module_list.xml
+++ b/app/src/main/res/layout/item_module_list.xml
@@ -58,7 +58,7 @@
                 app:layout_constraintStart_toStartOf="parent">
 
                 <ImageView
-                    android:src="@drawable/ic_book"
+                    android:src="@drawable/ic_book1"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     app:tint="#555" />
