--- a/app/src/main/res/layout/activity_flashcard.xml
+++ b/app/src/main/res/layout/activity_flashcard.xml
@@ -170,7 +170,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:gravity="center"
-                    android:text="The occurrence of events by chance in a happy or beneficial way"
+                    android:text="(n) tính kế thừa"
                     android:textColor="@android:color/black"
                     android:textSize="18sp" />
 
