--- a/app/src/main/res/layout/activity_flashcard.xml
+++ b/app/src/main/res/layout/activity_flashcard.xml
@@ -152,8 +152,7 @@
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_lightbulb"
-                    app:tint="#FFC107" />
+                    android:src="@drawable/ic_lightbulb" />
 
                 <TextView
                     android:layout_width="wrap_content"
