--- a/app/src/main/res/drawable/ic_warning.xml
+++ b/app/src/main/res/drawable/ic_warning.xml
@@ -1,13 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="122.88dp"
-    android:height="98.02dp"
-    android:viewportWidth="122.88"
-    android:viewportHeight="98.02">
-  <group>
-    <clip-path
-        android:pathData="M64.65,0.68c1.01,0.49 1.81,1.22 2.41,2.2l0,0l53.66,84.17c0.02,0.02 0.03,0.05 0.05,0.07c0.47,0.75 0.87,1.6 1.2,2.54c0.31,0.89 0.57,1.88 0.77,2.96c0.1,0.52 0.14,0.98 0.14,1.38c0,0.98 -0.24,1.81 -0.72,2.49c-0.55,0.78 -1.33,1.26 -2.33,1.45c-0.3,0.06 -0.59,0.08 -0.87,0.08H3.92c-0.28,0 -0.57,-0.03 -0.87,-0.08c-1,-0.19 -1.78,-0.67 -2.33,-1.45C0.24,95.81 0,94.98 0,94c0,-0.4 0.05,-0.86 0.15,-1.38c0.2,-1.08 0.45,-2.06 0.77,-2.96c0.33,-0.94 0.73,-1.78 1.2,-2.54l0,0l0.02,-0.03l53.68,-84.2l0.01,-0.02c0.6,-0.98 1.41,-1.71 2.41,-2.2c0.93,-0.45 2,-0.68 3.21,-0.68S63.72,0.23 64.65,0.68L64.65,0.68L64.65,0.68z"/>
-  </group>
+    android:width="800dp"
+    android:height="800dp"
+    android:viewportWidth="36"
+    android:viewportHeight="36">
   <path
-      android:pathData="M57.71,74.18c0.98,-0.95 2.15,-1.42 3.32,-1.51c0.78,-0.06 1.56,0.07 2.29,0.34c0.72,0.27 1.38,0.7 1.93,1.24c0.86,0.86 1.45,2.03 1.55,3.39c0.03,0.44 0,0.89 -0.08,1.34c-0.08,0.45 -0.22,0.88 -0.4,1.28c-0.62,1.33 -1.63,2.23 -2.78,2.71c-0.7,0.29 -1.45,0.42 -2.2,0.4c-0.75,-0.02 -1.49,-0.19 -2.16,-0.5c-1.15,-0.54 -2.14,-1.48 -2.69,-2.8c-0.16,-0.38 -0.27,-0.79 -0.34,-1.21c-0.07,-0.43 -0.09,-0.85 -0.06,-1.25l0,-0.01c0.04,-0.56 0.24,-1.29 0.54,-1.92C56.89,75.11 57.26,74.57 57.71,74.18L57.71,74.18zM65.49,64.41c-0.07,1.69 -1.18,2.75 -2.59,3.21c-0.48,0.16 -0.98,0.23 -1.47,0.23c-0.48,0 -0.99,-0.08 -1.47,-0.23c-1.41,-0.45 -2.52,-1.52 -2.58,-3.21c-0.78,-7.83 -2.79,-20.13 -2.72,-27.5c0.07,-2.27 1.95,-3.61 4.35,-4.12c0.74,-0.16 1.56,-0.24 2.38,-0.23c0.83,0 1.64,0.08 2.39,0.24c2.48,0.53 4.44,1.93 4.44,4.24l-0.01,0.23L65.49,64.41L65.49,64.41z"
-      android:fillColor="#35464E"/>
+      android:pathData="M2.653,35C0.811,35 -0.001,33.662 0.847,32.027L16.456,1.972c0.849,-1.635 2.238,-1.635 3.087,0l15.609,30.056c0.85,1.634 0.037,2.972 -1.805,2.972H2.653z"
+      android:fillColor="#FFCC4D"/>
+  <path
+      android:pathData="M15.583,28.953a2.421,2.421 0,0 1,2.419 -2.418a2.421,2.421 0,0 1,2.418 2.418a2.422,2.422 0,0 1,-2.418 2.419a2.422,2.422 0,0 1,-2.419 -2.419zM15.769,10.66c0,-1.302 0.961,-2.108 2.232,-2.108c1.241,0 2.233,0.837 2.233,2.108v11.938c0,1.271 -0.992,2.108 -2.233,2.108c-1.271,0 -2.232,-0.807 -2.232,-2.108L15.769,10.66z"
+      android:fillColor="#231F20"/>
 </vector>
