--- a/app/src/main/res/layout/activity_word_list.xml
+++ b/app/src/main/res/layout/activity_word_list.xml
@@ -69,7 +69,7 @@
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_flashcard"
+                    android:src="@drawable/ic_layers"
                     app:tint="@android:color/white" />
 
                 <TextView
