--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/homeFragment"
+        android:icon="@drawable/ic_launcher_foreground" 
+        android:title="Home" />
+    <item
         android:id="@+id/learningFragment"
         android:icon="@android:drawable/ic_menu_view"
         android:title="Learning" />
@@ -9,11 +13,11 @@
         android:icon="@android:drawable/ic_menu_search"
         android:title="Dictionary" />
     <item
-        android:id="@+id/flashcardFragment"
+        android:id="@+id/marketFragment"
         android:icon="@android:drawable/ic_menu_agenda"
-        android:title="Flashcard" />
+        android:title="Market" />
     <item
-        android:id="@+id/profileFragment"
+        android:id="@+id/groupFragment"
         android:icon="@android:drawable/ic_menu_manage"
-        android:title="Profile" />
+        android:title="Group" />
 </menu>
