--- a/app/src/main/res/drawable/bg_time_unit.xml
+++ b/app/src/main/res/drawable/bg_time_unit.xml
@@ -10,7 +10,7 @@
     <item android:right="8dp">
         <bitmap
             android:gravity="center_vertical|right"
-            android:src="@drawable/ic_expand_more"
+            android:src="@drawable/ic_code"
             android:tint="#64748B" />
     </item>
 </layer-list>
