--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/homeFragment"
-        android:icon="@drawable/ic_launcher_foreground" 
+        android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
         android:id="@+id/learningFragment"
-        android:icon="@android:drawable/ic_menu_view"
+        android:icon="@drawable/ic_learning"
         android:title="Learning" />
     <item
         android:id="@+id/dictionaryFragment"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_dictionary"
         android:title="Dictionary" />
     <item
         android:id="@+id/marketFragment"
-        android:icon="@android:drawable/ic_menu_agenda"
+        android:icon="@drawable/ic_market"
         android:title="Market" />
     <item
         android:id="@+id/groupFragment"
-        android:icon="@android:drawable/ic_menu_manage"
+        android:icon="@drawable/ic_group_nav"
         android:title="Group" />
 </menu>
