open camera screen

--- a/app/src/main/res/layout/fragment_add_word.xml
+++ b/app/src/main/res/layout/fragment_add_word.xml
@@ -155,6 +155,7 @@
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnScan"
                 style="@style/Widget.Material3.Button.OutlinedButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
